minor sonar fixes